# Tyvexa-Outreach-Engine

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  competitor_scan.md
evals/: README.md  run_architecture_eval.py
src/cold_outreach_engine/: __init__.py  cli.py  config.py  dashboard.py  models.py  orchestrator.py  storage.py
src/cold_outreach_engine/agents/: buyer_signal.py  campaign_strategy.py  clarification.py  competitor_gap.py  deduper.py  discovery.py  evidence.py  existing_solution.py  icp_planner.py  market_context.py  outreach_prep.py  qualification.py  scoring.py  source_router.py
src/cold_outreach_engine/providers/: base.py  brave_search.py  factory.py  firecrawl.py  google_places.py  openai_llm.py  sample.py
tests/: test_agent_architecture.py
